5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3858/executions/1831_3177.log
== TEST (2019-06-13 17:12:09) 
-- CODE:
from numpy import *
v = input()
r = zeros(5, dtype=int)
for x in range (size(v)):
	if(v[x] == 'a'):
		r[0] = r[0] +1
	elif(v[x] == 'e'):
		r[1] = r[1] +1
	elif(v[x] == 'i'):
		r[2] =r[2] +1
	elif(v[x] == 'o'):
		r[3] = r[3] +1
	elif(v[x] == 'u'):	
		r[4] = r[4] +1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:26:01) 
-- CODE:
from numpy import *
v = input()
r = zeros(5, dtype=int)
for x in range (size(v)):
	if(v[x] == 'a'):
		r[0] = r[0] +1
	elif(v[x] == 'e'):
		r[1] = r[1] +1
	elif(v[x] == 'i'):
		r[2] =r[2] +1
	elif(v[x] == 'o'):
		r[3] = r[3] +1
	elif(v[x] == 'u'):	
		r[4] = r[4] +1
for x in range (size(r)):
	print(r[x])
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:27:01) 
-- CODE:
from numpy import *
v = input()
r = zeros(5, dtype=int)
for x in range (size(v)):
	if(v[x] == 'a'):
		r[0] = r[0] +1
	elif(v[x] == 'e'):
		r[1] = r[1] +1
	elif(v[x] == 'i'):
		r[2] =r[2] +1
	elif(v[x] == 'o'):
		r[3] = r[3] +1
	elif(v[x] == 'u'):	
		r[4] = r[4] +1
print(r)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:27:29) 
-- CODE:
from numpy import *
v = input()
r = zeros(5, dtype=int)
for x in range (size(v)):
	if(v[x] == 'a'):
		r[0] = r[0] +1
	elif(v[x] == 'e'):
		r[1] = r[1] +1
	elif(v[x] == 'i'):
		r[2] =r[2] +1
	elif(v[x] == 'o'):
		r[3] = r[3] +1
	elif(v[x] == 'u'):	
		r[4] = r[4] +1
	print(v[x])
print(r)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:27:40) 
-- CODE:
from numpy import *
v = input()
r = zeros(5, dtype=int)
for x in range (len(v)):
	if(v[x] == 'a'):
		r[0] = r[0] +1
	elif(v[x] == 'e'):
		r[1] = r[1] +1
	elif(v[x] == 'i'):
		r[2] =r[2] +1
	elif(v[x] == 'o'):
		r[3] = r[3] +1
	elif(v[x] == 'u'):	
		r[4] = r[4] +1
	print(v[x])
print(r)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 17:27:53) 
-- CODE:
from numpy import *
v = input()
r = zeros(5, dtype=int)
for x in range (len(v)):
	if(v[x] == 'a'):
		r[0] = r[0] +1
	elif(v[x] == 'e'):
		r[1] = r[1] +1
	elif(v[x] == 'i'):
		r[2] =r[2] +1
	elif(v[x] == 'o'):
		r[3] = r[3] +1
	elif(v[x] == 'u'):	
		r[4] = r[4] +1
	print(v[x])
print(r)
		
-- EXECUTION TIME:
0.989322
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
m
e
t
i
c
u
l
o
s
a
[1 1 1 1 1]
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a
r
g
e
n
t
i
n
a
[2 1 1 0 0]
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
b
o
l
s
o
n
a
r
o
[1 0 0 3 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 17:27:55) 
-- CODE:
from numpy import *
v = input()
r = zeros(5, dtype=int)
for x in range (len(v)):
	if(v[x] == 'a'):
		r[0] = r[0] +1
	elif(v[x] == 'e'):
		r[1] = r[1] +1
	elif(v[x] == 'i'):
		r[2] =r[2] +1
	elif(v[x] == 'o'):
		r[3] = r[3] +1
	elif(v[x] == 'u'):	
		r[4] = r[4] +1
	print(v[x])
print(r)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 17:28:07) 
-- CODE:
from numpy import *
v = input()
r = zeros(5, dtype=int)
for x in range (len(v)):
	if(v[x] == 'a'):
		r[0] = r[0] +1
	elif(v[x] == 'e'):
		r[1] = r[1] +1
	elif(v[x] == 'i'):
		r[2] =r[2] +1
	elif(v[x] == 'o'):
		r[3] = r[3] +1
	elif(v[x] == 'u'):	
		r[4] = r[4] +1
print(r)
		
-- EXECUTION TIME:
1.19674
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
[1 1 1 1 1]
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
[2 1 1 0 0]
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
[1 0 0 3 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 17:30:14) 
-- CODE:
from numpy import *
v = input()
r = zeros(5, dtype=int)
for x in range (len(v)):
	if(v[x] == 'a'):
		r[0] = r[0] +1
	elif(v[x] == 'e'):
		r[1] = r[1] +1
	elif(v[x] == 'i'):
		r[2] =r[2] +1
	elif(v[x] == 'o'):
		r[3] = r[3] +1
	elif(v[x] == 'u'):	
		r[4] = r[4] +1
print('a:',r[0])
print('e', r[1])
print('i', r[2])
print('o', r[3])
print('u', r[4])
		
-- EXECUTION TIME:
1.09101
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
a: 1
e 1
i 1
o 1
u 1
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a: 2
e 1
i 1
o 0
u 0
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
a: 1
e 0
i 0
o 3
u 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 17:30:29) 
-- CODE:
from numpy import *
v = input()
r = zeros(5, dtype=int)
for x in range (len(v)):
	if(v[x] == 'a'):
		r[0] = r[0] +1
	elif(v[x] == 'e'):
		r[1] = r[1] +1
	elif(v[x] == 'i'):
		r[2] =r[2] +1
	elif(v[x] == 'o'):
		r[3] = r[3] +1
	elif(v[x] == 'u'):	
		r[4] = r[4] +1
print('a:',r[0])
print('e:', r[1])
print('i:', r[2])
print('o:', r[3])
print('u:', r[4])
		
-- EXECUTION TIME:
0.909274
-- TEST CASE 1:
---- input:
meticulosa
---- correct output:
a: 1
e: 1
i:  1
o: 1
u: 1
---- user output:
a: 1
e: 1
i: 1
o: 1
u: 1
-- TEST CASE 2:
---- input:
argentina
---- correct output:
a: 2
e: 1
i:  1
o: 0
u: 0
---- user output:
a: 2
e: 1
i: 1
o: 0
u: 0
-- TEST CASE 3:
---- input:
bolsonaro
---- correct output:
a: 1
e: 0
i:  0
o: 3
u: 0
---- user output:
a: 1
e: 0
i: 0
o: 3
u: 0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 17:33:57) 
-- CODE:
from numpy import *
v = input()
r = zeros(5, dtype=int)
for x in range (len(v)):
	if(v[x] == 'a'):
		r[0] = r[0] +1
	elif(v[x] == 'e'):s
		r[1] = r[1] +1
	elif(v[x] == 'i'):
		r[2] =r[2] +1
	elif(v[x] == 'o'):
		r[3] = r[3] +1
	elif(v[x] == 'u'):	
		r[4] = r[4] +1
print('a:',r[0])
print('e:', r[1])
print('i:', r[2])
print('o:', r[3])
print('u:', r[4])
		
-- EXECUTION TIME:
0.554874
-- ERROR:
  File "/home/codebench/codes/1831/3177/main.py", line 8
    r[1] = r[1] +1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 10:13:22) 
-- CODE:
from numpy import *
v = input()
r = zeros(5, dtype=int)
for x in range (len(v)):
	if(v[x] == 'a'):
		r[0] = r[0] +1
	elif(v[x] == 'e'):
		r[1] = r[1] +1
	elif(v[x] == 'i'):
		r[2] =r[2] +1
	elif(v[x] == 'o'):
		r[3] = r[3] +1
	elif(v[x] == 'u'):	
		r[4] = r[4] +1
print('a:',r[0])
print('e:', r[1])
print('i:', r[2])
print('o:', r[3])
print('u:', r[4])
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 10:13:32) 
-- CODE:
from numpy import *
v = input()
r = zeros(5, dtype=int)
for x in range (len(v)):
	if(v[x] == 'a'):
		r[0] = r[0] +1
	elif(v[x] == 'e'):
		r[1] = r[1] +1
	elif(v[x] == 'i'):
		r[2] =r[2] +1
	elif(v[x] == 'o'):
		r[3] = r[3] +1
	elif(v[x] == 'u'):	
		r[4] = r[4] +1
print('a:',r[0])
print('e:', r[1])
print('i:', r[2])
print('o:', r[3])
print('u:', r[4])
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
